<resources>
    <string name="app_name">Project 5</string>
    <string name="build_your_own_pizza">Build Your Own Pizza</string>
    <string name="ru_pizza">RU Pizza</string>
    <string name="order_speciality_pizza">Order Speciality Pizza</string>
    <string name="order">Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="order_a_speciality_pizza">Order A Speciality Pizza</string>
    <string name="add_to_order">Add to Order</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="tomato">Tomato</string>
    <string name="alfredo">Alfredo</string>
    <string name="sauce">Sauce</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="price">Price:</string>
    <string name="additional_topping_choices">Additional Topping Choices:</string>
    <string name="toppings_selected">Toppings Selected:</string>
    <string name="choose_a_size">Choose a Size</string>
    <string name="choose_a_sauce">Choose a Sauce</string>
    <string name="quantity">Quantity:</string>
    <string name="pizza_orders">Pizza Orders</string>
    <string name="order_number">Order Number:</string>
    <string name="order_total">Order Total:</string>
    <string name="ttldisplay">ttlDisplay</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="speciality_name">Speciality Name</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="pizza_order">Pizza Order</string>
    <string name="ordttldisplay">ordttlDisplay</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="sbttldisplay">sbttlDisplay</string>
    <string name="subtotal">Subtotal</string>
    <string name="slstxdisplay">SlstxDisplay</string>

    <string-array name="specialityNames">
        <item>Deluxe</item>
        <item>Supreme</item>
        <item>Meatzza</item>
        <item>Seafood</item>
        <item>Pepperoni</item>
        <item>Veggie Delight</item>
        <item>Classic Hawaiian</item>
        <item>Margherita</item>
        <item>Six Cheese</item>
        <item>Spinach Feta</item>
    </string-array>

</resources>