<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBF3E8">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pizzaOrderLabel"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:ems="15"
                android:fontFamily="cursive"
                android:inputType="text"
                android:text="@string/pizza_order"
                android:textAlignment="center"
                android:textColor="#AC001A"
                android:textSize="60sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/orderNumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_weight="1"
                    android:text="@string/order_number"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/orderNumDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/order_number"
                    android:textSize="20sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/pizzaOrderList"
                android:layout_width="match_parent"
                android:layout_height="550sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subtotalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/subtotal"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/subTotalDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/sbttldisplay"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/salesTaxLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/sales_tax"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/salesTaxDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/slstxdisplay"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/orderTotalLabel"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/order_total"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/orderTotalDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/ordttldisplay"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/removePizzaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/remove_pizza"
                    tools:onClick="onRemovePizzaButtonClick" />

                <Button
                    android:id="@+id/placeOrderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/place_order"
                    tools:onClick="onPlaceOrderButtonClick" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>