<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#DBF3E8"
    tools:context=".SpecialitySelectedActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SPTitleText"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/speciality_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/SpecialityImage"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                app:srcCompat="@drawable/defaultpizza" />

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/SizeGroup"
                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/SPSmallButton"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/small"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/SPMediumButton"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/medium"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/SPLargeButton"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/large"
                        android:textSize="20sp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/SPSauceSelection"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:text="@string/sauce"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/SPExtraSauceCheck"
                        android:layout_width="160dp"
                        android:layout_height="48dp"
                        android:text="@string/extra_sauce"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/SPExtraCheeseCheck"
                        android:layout_width="160dp"
                        android:layout_height="48dp"
                        android:text="@string/extra_cheese"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/SPToppings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="349dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quantityLabel"
                    android:layout_width="189dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/quantity"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/quantityInput"
                    android:layout_width="189dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint='@string/enter_quantity'
                    android:inputType="number"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="349dp"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BYOPriceLabel"
                    android:layout_width="51dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="@string/price"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/SPPriceDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:gravity="left"
                    android:textSize="30sp" />
            </LinearLayout>

            <Button
                android:id="@+id/SPAddtoOrder"
                android:layout_width="350dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/add_to_order"
                android:textSize="34sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>