<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBF3E8">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pizzaOrderTitle"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="15"
            android:fontFamily="cursive"
            android:text="@string/pizza_orders"
            android:textAlignment="center"
            android:textColor="#AC001A"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/soOrderNumLabel"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/order_number"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/soOrderNumSpinner"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/soOrderTotalLabel"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/order_total"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/soOrderTotalDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/ttldisplay"
                android:textSize="24sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/soPizzaOrderList"
            android:layout_width="match_parent"
            android:layout_height="500sp" />

        <Button
            android:id="@+id/soCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel_order" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>